--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,5 @@ typing_extensions==4.13.1
 # Image processing
 Pillow==11.1.0
 
-# Production server (for Render)
+# Simple production server (for Render)
 gunicorn==21.2.0
-
-# Static file handling
-whitenoise==6.6.0
-
-# Database (for Render PostgreSQL)
-dj-database-url==2.1.0
-
-# Environment variables
-python-dotenv==1.0.0
