--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 workingDirectory = "twitter"
 
 [deploy]
-startCommand = "gunicorn twitter.wsgi:application --bind 0.0.0.0:$PORT"
+startCommand = "python start.py"
 restartPolicyType = "on_failure"
 
 [environments.production]
