--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,8 @@
 [build]
 builder = "nixpacks"
-workingDirectory = "twitter"
 
 [deploy]
-startCommand = "python start.py"
+startCommand = "python twitter/start.py"
 restartPolicyType = "on_failure"
 
 [environments.production]
