--- a/twitter/requirements-production.txt
+++ b/twitter/requirements-production.txt
@@ -17,4 +17,7 @@ whitenoise==6.6.0
 dj-database-url==2.1.0
 
 # Environment variables
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+
+# Database
+psycopg2
